td:size_t issue on windows with msvc compiler fixed.
This commit actually fix 6aefd7489fd7e7f5dcf70302924f5e46c0828b00 hotfix in a proper way.

--- a/tdutils/CMakeLists.txt
+++ b/tdutils/CMakeLists.txt
@@ -252,6 +252,8 @@ set(TDUTILS_SOURCE
   td/utils/utf8.h
   td/utils/Variant.h
   td/utils/VectorQueue.h
+
+  td/utils/sizet.cpp
 )
 
 if (TDUTILS_MIME_TYPE)
