--- a/blockchain-explorer/CMakeLists.txt
+++ b/blockchain-explorer/CMakeLists.txt
@@ -4,8 +4,7 @@ cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 find_package(MHD)
 
 if (MHD_FOUND)
-
-  set(BLOCHAIN_EXPLORER_SOURCE 
+  set(BLOCHAIN_EXPLORER_SOURCE
     blockchain-explorer.cpp
     blockchain-explorer.hpp
     blockchain-explorer-http.cpp
@@ -18,5 +17,9 @@ if (MHD_FOUND)
   target_include_directories(blockchain-explorer PUBLIC ${MHD_INCLUDE_DIRS})
   target_link_libraries(blockchain-explorer tdutils tdactor adnllite tl_lite_api tl-lite-utils
     ton_crypto ton_block ${MHD_LIBRARY})
+
+else()
+  message(" MHD Library not found.")
+  message(" Can not build Block Explorer.")
 
 endif()
