WIP. Refactoring. adnl moved.
tonlib чет не собирается, но я даже хуй знает почему он собирался раньше. Такие дела.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,7 +363,7 @@ add_subdirectory(tl)
 add_subdirectory(terminal)
 add_subdirectory(keys)
 add_subdirectory(tl-utils)
-add_subdirectory(adnl)
+add_subdirectory(networking)
 add_subdirectory(crypto)
 add_subdirectory(lite-client)
 
