--- a/networking/CMakeLists.txt
+++ b/networking/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
 add_subdirectory(adnl)
 add_subdirectory(overlay)
+add_subdirectory(rldp)
+add_subdirectory(rldp2)
