wip. refactoring. apps from /utils moved to /apps
Не ну вообще стоило бы убрать и директорию конечно, но мне влом делать это сейчас.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 add_subdirectory(blockchain-explorer)
 add_subdirectory(dht-server)
 add_subdirectory(lite-client)
+add_subdirectory(utils)
 
 add_executable(adjust-block adjust-block.cpp)
 target_link_libraries(adjust-block PUBLIC ton_crypto fift-lib ton_block)
