--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(blockchain-explorer)
 add_subdirectory(dht-server)
 add_subdirectory(lite-client)
 add_subdirectory(utils)
+add_subdirectory(rldp-http-proxy)
 
 add_executable(adjust-block adjust-block.cpp)
 target_link_libraries(adjust-block PUBLIC ton_crypto fift-lib ton_block)
