--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,6 +5,8 @@ add_subdirectory(dht-server)
 add_subdirectory(lite-client)
 add_subdirectory(utils)
 add_subdirectory(rldp-http-proxy)
+add_subdirectory(validator-engine)
+add_subdirectory(validator-engine-console)
 
 add_executable(adjust-block adjust-block.cpp)
 target_link_libraries(adjust-block PUBLIC ton_crypto fift-lib ton_block)
