--- a/src/Blockchain/crypto/CMakeLists.txt
+++ b/src/Blockchain/crypto/CMakeLists.txt
@@ -406,7 +406,7 @@ if (NOT CMAKE_CROSSCOMPILING)
   add_dependencies(smc-envelope gen_fif)
 endif()
 
-add_executable(test-weight-distr block/test-weight-distr.cpp)
+add_executable(test-weight-distr block/test/test-weight-distr.cpp)
 target_include_directories(test-weight-distr PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)
 target_link_libraries(test-weight-distr PUBLIC ton_crypto fift-lib ton_block)
