--- a/src/Networking/CMakeLists.txt
+++ b/src/Networking/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
 add_subdirectory(adnl)
+add_subdirectory(dht)
+add_subdirectory(http)
 add_subdirectory(overlay)
 add_subdirectory(rldp)
 add_subdirectory(rldp2)
