--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,28 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
-add_subdirectory(Blockchain)
-add_subdirectory(Networking)
-add_subdirectory(Services)
-add_subdirectory(Tools)
-
-add_subdirectory(common)
-add_subdirectory(fec)
-add_subdirectory(keyring)
-add_subdirectory(keys)
-add_subdirectory(memprof)
+#TODO:
+#add_subdirectory(Blockchain)
+#TODO:
+#add_subdirectory(common)
+#TODO:
+#add_subdirectory(fec)
+#TODO:
+#add_subdirectory(keyring)
+#TODO:
+#add_subdirectory(keys)
+#TODO:
+#add_subdirectory(memprof)
+#TODO:
+#add_subdirectory(Networking)
+#TODO:
+#add_subdirectory(Services)
 add_subdirectory(td)
-add_subdirectory(terminal)
-add_subdirectory(tl)
+#TODO:
+#add_subdirectory(terminal)
+#TODO:
+#add_subdirectory(tl)
+#TODO:
 #add_subdirectory(tonlib)
+#TODO:
+#add_subdirectory(Tools)
 
