--- a/src/td/CMakeLists.txt
+++ b/src/td/CMakeLists.txt
@@ -1,23 +1,28 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
-add_subdirectory(tdactor)
-add_subdirectory(tddb)
-add_subdirectory(tdfec)
-add_subdirectory(tdnet)
-add_subdirectory(tdtl)
-
+#TODO:
+#add_subdirectory(tdactor)
+#TODO:
+#add_subdirectory(tddb)
+#TODO:
+#add_subdirectory(tdfec)
+#TODO:
+#add_subdirectory(tdnet)
+#TODO:
+#add_subdirectory(tdtl)
 
 # There is no need for tdutils to generate mime type conversion.
 # tdutils is actually a git subrepo, so I define this statement here. Sorry.
 set(TDUTILS_MIME_TYPE OFF CACHE BOOL "Generate mime type conversion")
-if (NOT CMAKE_CROSSCOMPILING)
-    if (TDUTILS_MIME_TYPE)
-        set(TDMIME_AUTO tdmime_auto)
-    endif()
-    #add_custom_target(prepare_cross_compiling DEPENDS tl_generate_common tlb_generate_block gen_fif ${TDMIME_AUTO})
+#if (NOT CMAKE_CROSSCOMPILING)
+#    if (TDUTILS_MIME_TYPE)
+#        set(TDMIME_AUTO tdmime_auto)
+#    endif()
+#    #add_custom_target(prepare_cross_compiling DEPENDS tl_generate_common tlb_generate_block gen_fif ${TDMIME_AUTO})
+#endif()
+if(WINGETOPT_FOUND)
+    message(STATUS "wingetopt found: ${WINGETOPT_FOUND}")
+else()
+    message("wingetopt not found")
 endif()
-
-#FIXME: cyka.
-set(CRC32C_FOUND 1)
-
-add_subdirectory(tdutils)
+add_subdirectory(tdutils) #FIXME: lib uses wingetopt, zlib, CRC32C, ABSL
