--- a/src/Blockchain/CMakeLists.txt
+++ b/src/Blockchain/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
 add_subdirectory(block)
+add_subdirectory(catchain)
 add_subdirectory(crypto)
+add_subdirectory(smart-contracts)
+add_subdirectory(validator)
+add_subdirectory(validator-session)
+add_subdirectory(vm)
