--- a/src/Networking/dht/CMakeLists.txt
+++ b/src/Networking/dht/CMakeLists.txt
@@ -21,12 +21,21 @@ set(DHT_SOURCE
         dht.hpp
 )
 
-add_library(dht STATIC ${DHT_SOURCE})
-
-target_include_directories(dht PUBLIC 
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> 
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/.. 
-  ${OPENSSL_INCLUDE_DIR}
+add_library(dht
+        STATIC
+          ${DHT_SOURCE}
 )
-target_link_libraries(dht PRIVATE tdutils tdactor adnl tl_api)
+target_include_directories(dht
+        PUBLIC
+          $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+          $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/..
+          ${OPENSSL_INCLUDE_DIR}
+)
+target_link_libraries(dht
+        PRIVATE
+          tdutils
+          tdactor
+          adnl
+          tl_api
+)
 
